--- a/package.json
+++ b/package.json
@@ -27,11 +27,14 @@
     "@storybook/vue3-vite": "^8.0.0",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/eslint-config-prettier": "^8.0.0",
+    "autoprefixer": "^10.4.18",
     "eslint": "^8.49.0",
     "eslint-plugin-storybook": "^0.8.0",
     "eslint-plugin-vue": "^9.17.0",
+    "postcss": "^8.4.35",
     "prettier": "^3.0.3",
     "storybook": "^8.0.0",
+    "tailwindcss": "^3.4.1",
     "vite": "^5.1.5"
   }
 }
